[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/homeless/Homeless.gd" type="Script" id=1]
[ext_resource path="res://sprites/Npc_9_sleeping.png" type="Texture" id=2]
[ext_resource path="res://sprites/Npc_9_idle.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.00002
height = 14.0

[sub_resource type="Animation" id=2]
resource_name = "drink"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 6 ), Vector2( 0, 5 ) ]
}

[node name="Homeless" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="Knocked" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 3 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/drink = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AnimTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]
